@@ -100,7 +100,7 @@ ifneq (,$(filter valgrind, $(shell dpkg-query --show -f '$${Depends}\n' valgrind
 endif
 
 VER=3.12
-SVER=3.12.0
+SVER=3.12.1
 NVER=3.13
 PVER=python$(VER)
 EXT_VER=$(subst .,,$(VER))
